# django-practical-guide

./: README.md  pyproject.toml
api/: db.sqlite3  main.py
api/challenges/: urls.py  views.py
api/challenges/templates/challenges/: base.html  challenge.html  index.html
api/mypage/: settings.py
