[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.0"
Django = "^3.2.9"

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
